@@ -1,3 +1,7 @@
+2009-09-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/debug/dwarf2/struct-loc1.c: New test.
+
 2009-09-16  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
